# chust8

./: Cargo.toml
src/: audio.rs  clock.rs  display.rs  helpers.rs  input.rs  interpreter.rs  lib.rs  main.rs  memory.rs  opcodes.rs  registers.rs  stack.rs  timer.rs
src/display/: grid.rs  tileset.rs
src/interpreter/: instructions.rs
