[package]
name    = "chust8"
version = "0.1.0"
authors = ["Thordreck <paezguerraalvaro@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec          = "0.5.1"
strum_macros      = "0.18.0"
strum             = "0.18.0"
num-traits        = "0.2.11"
rand              = "0.7.3"
static_assertions = "1.1.0"

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["image", "unsafe_textures"]

[dev-dependencies]
lazy_static = "1.4.0"
